--- a/now.json
+++ b/now.json
@@ -1,9 +1,9 @@
 {
     "version": 2,
-    "name": "sprint-challenge-react-wars",
+    "name": "starwars",
     "builds": [
         {
-            "src": "sprint-challenge-react-wars/package.json",
+            "src": "starwars/package.json",
             "use": "@now/static-build",
             "config": {
                 "distDir": "build"
@@ -13,7 +13,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "sprint-challenge-react-wars/$1"
+            "dest": "starwars/$1"
         }
     ]
 }
